--- a/spring/demo/src/main/resources/application.yaml
+++ b/spring/demo/src/main/resources/application.yaml
@@ -1,3 +1,19 @@
 
 server:
   port: 7777
+
+spring:
+  datasource:
+    url: jdbc:mysql://localhost:3306/jpa_test_db?allowpublickeyretrieval=true&usessl=false&serverTimezone=UTC
+    username: eddi
+    password: eddi@123
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    dialect: org.hibernate.dialect.MySQL8Dialect
+
+  jpa:
+    open-in-view: false
+    database: mysql
+    show-sql: true
+    generate-ddl: true
+    hibernate:
+      ddl-auto: update
