(55회차) Vuetify coverflow UI 구성법

--- a/vue/frontend/package.json
+++ b/vue/frontend/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "core-js": "^3.8.3",
     "vue": "^2.6.14",
+    "vue-coverflow": "^2.2.0",
     "vue-router": "^3.5.1",
     "vuetify": "^2.6.0",
     "vuex": "^3.6.2"
