--- a/vue/frontend/package.json
+++ b/vue/frontend/package.json
@@ -30,6 +30,7 @@
     "sass": "~1.32.0",
     "sass-loader": "^10.0.0",
     "vue-cli-plugin-vuetify": "~2.5.8",
+    "vue-cookies": "^1.8.1",
     "vue-template-compiler": "^2.6.14",
     "vuetify-loader": "^1.7.0"
   },
